--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -1,6 +1,6 @@
 {
     "header": {
-        "small-title": "Hi, my name is",
+        "small-title": "Hi 👋, my name is",
         "title": "Manuel Gutierrez",
         "subtitle": "I'm a FrontEnd Developer.",
         "title-description": "I am that kind of 'problem solver' person to give you just what you are looking for",
