--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -1,8 +1,8 @@
 {
     "header": {
-        "small-title": "Hola, mi nombre es",
+        "small-title": "Hola 👋, mi nombre es",
         "title": "Manuel Gutiérrez",
-        "subtitle": "Soy un desarrollador de Front End.",
+        "subtitle": "Soy desarrollador FrontEnd.",
         "title-description": "Soy ese tipo de persona que 'soluciona problemas' para darte justo lo que estás buscando.",
         "button-work": "Ver trabajo"
     },
